--- a/Campus Frontend/package.json
+++ b/Campus Frontend/package.json
@@ -26,6 +26,10 @@
     "@coreui/react": "^5.1.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
